--- a/index.html
+++ b/index.html
@@ -33,92 +33,92 @@
         const places = [
             {
                 name: "Sultan Ibrahim Building",
-                coords: [1.4561, 103.7631],
-                img: "",
+                coords: [1.4550, 103.7610],
+                img: "img/sultan ibrahim building.jpg",
                 link: "#"
             },
             {
                 name: "Glass Temple",
-                coords: [1.4721, 103.7625],
-                img: "",
+                coords: [1.4645, 103.7631],
+                img: "img/glass-temple.jpg",
                 link: "#"
             },
             {
                 name: "Dataran Bandaraya",
-                coords: [1.4813, 103.7414],
-                img: "",
+                coords: [1.4710, 103.7510],
+                img: "img/dataran bandaraya jb.jpg",
                 link: "#"
             },
             {
                 name: "Laman Mahkota, Istana Bukit Serene",
-                coords: [1.4563, 103.7296],
-                img: "",
+                coords: [1.4745, 103.7335],
+                img: "img/mahkota.png",
                 link: "#"
             },
             {
                 name: "Masjid Sultan Abu Bakar",
-                coords: [1.4605, 103.7486],
-                img: "",
+                coords: [1.4555, 103.7555],
+                img: "img/masjid sultan abu bakar.jpg",
                 link: "#"
             },
             {
                 name: "Muzium Tokoh",
-                coords: [1.4718, 103.7554],
-                img: "",
+                coords: [1.4718, 103.7554], // Keeping original as no updated coord provided
+                img: "img/muzium tokoh.jpg",
                 link: "#"
             },
             {
                 name: "Legoland Malaysia",
-                coords: [1.4264, 103.6292],
-                img: "",
+                coords: [1.4274, 103.6318],
+                img: "img/legoland.jpg",
                 link: "#"
             },
             {
                 name: "Skyscape Menara JLand",
-                coords: [1.4644, 103.7589],
+                coords: [1.4625, 103.7630],
                 img: "img/menara-jland.jpg",
                 link: "#"
             },
             {
                 name: "Stadium Sultan Ibrahim",
-                coords: [1.4786, 103.5956],
-                img: "",
+                coords: [1.5045, 103.6305],
+                img: "img/stadium sultan ibrahim.jpg",
                 link: "#"
             },
             {
                 name: "Puteri Harbour",
-                coords: [1.4192, 103.6568],
+                coords: [1.4195, 103.6565],
                 img: "img/Puteri-Harbour-Malaysia.jpg",
                 link: "#"
             },
             {
                 name: "Kompleks Kraf Johor",
-                coords: [1.5003, 103.7310],
-                img: "",
+                coords: [1.4660, 103.7575],
+                img: "img/kompleks kraf johor.jpeg",
                 link: "#"
             },
             {
                 name: "Sungai Lebam",
-                coords: [1.5473, 104.0704],
-                img:"",
+                coords: [1.3920, 104.1360],
+                img: "/img/sungai lebam.jpg",
                 link: "#"
             },
             {
                 name: "Eco Tourism Kampung Sungai Melayu",
-                coords: [1.4311, 103.6437],
-                img: "",
+                coords: [1.4180, 103.6355],
+                img: "img/kg.jpg",
                 link: "#"
             },
             {
                 name: "Zoo Johor",
-                coords: [1.4617, 103.7505],
-                img: "",
+                coords: [1.4555, 103.7550],
+                img: "img/Zoo Johor.jpg",
                 link: "#"
             },
             {
                 name: "Istana Besar",
-                coords: [1.4633, 103.7516],
-                img: "",
+                coords: [1.4555, 103.7575],
+                img: "img/Istana Besar.jpg",
                 link: "#"
             }
         ];
