--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             {
                 name: "Eco Tourism Kampung Sungai Melayu",
                 coords: [1.4180, 103.6355],
-                img: "img/kg.jpg",
+                img: "img/Kg.jpg",
                 link: "#"
             },
             {
