--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             {
                 name: "Sungai Lebam",
                 coords: [1.3920, 104.1360],
-                img: "/img/sungai lebam.jpg",
+                img: "img/sungai-lebam.jpg",
                 link: "#"
             },
             {
